force-app/main/default/objects/Income_Debit_History__c/Income_Debit_History__c.object-meta.xml
<CustomObject>
    <label>Income Debit History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Income Debit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Debit History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>