force-app/main/default/objects/Income_Debit_History__c/fields/Customer_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Description__c</fullName>
    <label>Customer Payment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>