force-app/main/default/objects/Income_Debit_History__c/fields/DD_Code__c.field-meta.xml
<CustomField>
    <fullName>DD_Code__c</fullName>
    <label>DD Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>