force-app/main/default/objects/Income_Debit_History__c/fields/DD_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Collection_Date__c</fullName>
    <label>DD Collection Date</label>
    <type>Date</type>
</CustomField>