force-app/main/default/objects/Income_Debit_History__c/fields/DD_Failed__c.field-meta.xml
<CustomField>
    <fullName>DD_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DD Failed</label>
    <type>Checkbox</type>
</CustomField>