force-app/main/default/objects/Income_Debit_History__c/fields/DD_Failed_Description__c.field-meta.xml
<CustomField>
    <fullName>DD_Failed_Description__c</fullName>
    <label>DD Failed Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>