force-app/main/default/objects/Income_Debit_History__c/fields/DD_File_Name__c.field-meta.xml
<CustomField>
    <fullName>DD_File_Name__c</fullName>
    <label>DD File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>