force-app/main/default/objects/Income_Debit_History__c/fields/DD_Stage__c.field-meta.xml
<CustomField>
    <fullName>DD_Stage__c</fullName>
    <label>DD Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>