force-app/main/default/objects/Income_Debit_History__c/fields/DD_Status__c.field-meta.xml
<CustomField>
    <fullName>DD_Status__c</fullName>
    <label>DD Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>