force-app/main/default/objects/Income_Debit_History__c/fields/Income_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>Income_Direct_Debit__c</fullName>
    <label>Income Direct Debit</label>
    <referenceTo>Income_Direct_Debit__c</referenceTo>
    <relationshipLabel>Income Debit History</relationshipLabel>
    <relationshipName>Income_Debit_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>