force-app/main/default/objects/Income_Debit_History__c/fields/NPSP_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>NPSP_Collection_Date__c</fullName>
    <formula>DATE(YEAR(DD_Collection_Date__c),  MONTH(DD_Collection_Date__c), VALUE(TEXT(Income_Direct_Debit__r.DD_Collection_Day__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPSP Collection Date</label>
    <type>Date</type>
</CustomField>